[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/enemies/goblin/goblin-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Goblin.gd" type="Script" id=2]
[ext_resource path="res://scenes/EnemyBar.tscn" type="PackedScene" id=18]
[ext_resource path="res://audio/sfx/slime.ogg" type="AudioStream" id=19]
[ext_resource path="res://scenes/FCTMgr.tscn" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "toggle_hitbox"
}, {
"args": [  ],
"method": "toggle_hitbox"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/attack/node = SubResource( 5 )
states/attack/position = Vector2( 1012, 166 )
states/dead/node = SubResource( 6 )
states/dead/position = Vector2( 813, 77 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 813, 166 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 614, 166 )
transitions = [ "idle", "dead", SubResource( 9 ), "idle", "attack", SubResource( 10 ), "attack", "idle", SubResource( 11 ), "idle", "run", SubResource( 12 ), "run", "idle", SubResource( 13 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 7.79327, 12.0306 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 8, 11.9088 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 16, 8 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -17.5, 0 )
texture = ExtResource( 1 )
vframes = 5
hframes = 7
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/dead = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 16 )

[node name="HealthBar" parent="." instance=ExtResource( 18 )]
margin_left = -8.1908
margin_top = -19.7686
margin_right = 535.809
margin_bottom = 68.2314
rect_scale = Vector2( 0.03, 0.03 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
volume_db = -5.0

[node name="FCTMgr" parent="." instance=ExtResource( 20 )]
position = Vector2( 0, -12.5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 17 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 18 )
disabled = true

[node name="AnimationDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="AnimationDelay" to="." method="_on_AnimationDelay_timeout"]
